RESOLVED FIXED 257612
[Filters] Loop through the SVGFilter unique effects instead of traversing the whole graph when possible
https://bugs.webkit.org/show_bug.cgi?id=257612
Summary [Filters] Loop through the SVGFilter unique effects instead of traversing the...
Said Abou-Hallawa
Reported 2023-06-01 11:38:36 PDT
After 263886@main, SVGFilter owns a Vector of unique effects. Its expression has only indices to this Vector. So it is more efficient to loop through this Vector instead of traversing the whole graph through the SVGFilterExpression when possible.
Attachments
Radar WebKit Bug Importer
Comment 1 2023-06-01 11:39:00 PDT
Said Abou-Hallawa
Comment 2 2023-06-01 11:46:53 PDT
EWS
Comment 3 2023-06-01 15:56:58 PDT
Committed 264813@main (d9fab762ebfd): <https://commits.webkit.org/264813@main> Reviewed commits have been landed. Closing PR #14596 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.