[Filters] Loop through the SVGFilter unique effects instead of traversing the whole graph when possible https://bugs.webkit.org/show_bug.cgi?id=257612 rdar://110125903

Reviewed by Cameron McCormack.

It is efficient for SVGFilter to loop through its unique effects vector instead
of traversing the whole graph through the SVGFilterExpression when possible.

This a left over from 263886@main which made SVGFilterExpression own indices to
the vector of unique effects.

* Source/WebCore/svg/graphics/filters/SVGFilter.cpp:
(WebCore::SVGFilter::supportedFilterRenderingModes const):
(WebCore::SVGFilter::effectsOfType const):
(WebCore::SVGFilter::apply):

Canonical link: https://commits.webkit.org/264813@main