Source/WebCore/svg/graphics/filters/SVGFilter.cpp
@@ -221,10 +221,8 @@ OptionSet<FilterRenderingMode> SVGFilter::supportedFilterRenderingModes() const
 {
     OptionSet<FilterRenderingMode> modes = allFilterRenderingModes;
 
-    for (auto& term : m_expression) {
-        auto& effect = m_effects[term.index];
+    for (auto& effect : m_effects)
         modes = modes & effect->supportedFilterRenderingModes();
-    }
 
     ASSERT(modes);
     return modes;
@@ -232,15 +230,14 @@ OptionSet<FilterRenderingMode> SVGFilter::supportedFilterRenderingModes() const
 
 FilterEffectVector SVGFilter::effectsOfType(FilterFunction::Type filterType) const
 {
-    HashSet<Ref<FilterEffect>> effects;
+    FilterEffectVector effects;
 
-    for (auto& term : m_expression) {
-        auto& effect = m_effects[term.index];
+    for (auto& effect : m_effects) {
         if (effect->filterType() == filterType)
-            effects.add(effect);
+            effects.append(effect);
     }
 
-    return copyToVector(effects);
+    return effects;
 }
 
 FilterResults& SVGFilter::ensureResults(const FilterResultsCreator& resultsCreator)
@@ -277,6 +274,7 @@ RefPtr<FilterImage> SVGFilter::apply(const Filter&, FilterImage& sourceImage, Fi
 RefPtr<FilterImage> SVGFilter::apply(FilterImage* sourceImage, FilterResults& results)
 {
     ASSERT(!m_expression.isEmpty());
+    ASSERT(supportedFilterRenderingModes().contains(FilterRenderingMode::Software));
 
     FilterImageVector stack;
 
